# document-intelligence-refinery

./: DOMAIN_NOTES.md  README.md  benchmark_retrieval.py  build_pageindex.py  config.yaml  fact_store.db  facttable_populate.py  generate_ldus.py  process_and_log_documents.py  pyproject.toml  query_example.py  test_log_ledger.py  test_triage_with_document.py
.refinery/: extraction_ledger.jsonl  ldus.json  pageindex.json
.refinery/Profiles/: DocumentProfile.json
rubric/: extraction_rules.yaml
scripts/: benchmark_retrieval.py  report_costs.py
src/agents/: auditor.py  extractor.py  query.py  query_agent.py  triage.py
src/db/: fact_store.py
src/engine/: chunker.py  indexer.py
src/strategies/: base.py  docling_adapter.py  exceptions.py  extractors.py  fasttext.py  layout.py  vision.py
src/utils/: budget.py  budget_guard.py  config.py  logger.py  logging_manager.py
tests/: test_strategy_escalation.py  test_triage.py  test_triage_and_extraction.py  test_triage_with_document.py
